--- a/views/content/blog.html
+++ b/views/content/blog.html
@@ -3,11 +3,11 @@
     <img src="img/banners/blog.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">Blog</h2>
   </div>
-  <div class="blog-main">
+  <div class="blog-page">
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <div class="blog-section">
+          <div class="blog-pagesection">
             <div class="row">
               <div class="col-md-6" ng-repeat="blog in blogpage">
                 <div class="blog-part">
@@ -15,8 +15,8 @@
                     <img ng-src="{{blog.img}}" alt="" class="img-responsive">
                   </div>
                   <div class="blog-detail">
-                    <h3 class="brand-brown-dark text-uppercase">{{blog.title}}</h3>
-                    <p class="blog-descp">{{blog.descp}}</p>
+                    <h4 class="brand-brown-dark text-bold text-uppercase">{{blog.title}}</h4>
+                    <p class="blog-descp text-justify">{{blog.descp}}</p>
                     <div class="read-more">
                       <a href="" class="btn btn-primary text-uppercase">read more</a>
                     </div>
@@ -31,28 +31,24 @@
             <form action="">
               <div class="form-group">
                 <div class="input-group">
-                  <input type="text" class="form-control">
-                  <span type="submit" class="input-group-addon">icon</span>
+                  <input type="text" class="form-control" placeholder="Search">
+                  <span class="input-group-addon"><i class="fa fa-search brand-brown-dark"></i></span>
                 </div>
               </div>
             </form>
             <div class="post">
-              <h3 class="text-uppercase brand-brown-dark">popular post</h3>
+              <h4 class="text-uppercase brand-brown-dark">popular post</h4>
               <div class="blog-post" ng-repeat="post in popularpost">
-                <div class="media">
-                  <div class="media-left">
-                    <div class="media-imghold">
-                      <img ng-src="{{post.img}}" alt="" class="img-responsive media-object">
-                    </div>
-                  </div>
-                  <div class="media-body">
-                    <h4 class="media-heading">{{post.title}}</h4>
-                  </div>
+                <div class="post-imghold inline-block">
+                  <img ng-src="{{post.img}}" alt="" class="img-responsive media-object">
+                </div>
+                <div class="post-content inline-block v-top">
+                  <h5 class="brand-brown-dark">{{post.title}}</h5>
                 </div>
               </div>
             </div>
             <div class="tags">
-              <h3 class="text-uppercase brand-brown-dark">tags</h3>
+              <h4 class="text-uppercase brand-brown-dark">tags</h4>
               <div class="click-tag">
                 <a href="" class="btn btn-primary text-uppercase" ng-repeat="tag in tagger">{{tag.name}}</a>
               </div>
@@ -61,5 +57,6 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 </section>
